--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 # DATABASE
 spring.datasource.url=jdbc:mysql://localhost:3306/absencedb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Africa/Casablanca
 spring.datasource.username=root
-spring.datasource.password=achraf
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ====================== JPA / HIBERNATE ======================
